# helix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
api/: Dockerfile  pyproject.toml
api/db/migrations/: 001_initial.sql  002_phase2_snapshots.sql  003_phase3_oob.sql  004_per_user_job_serialization.sql  005_optional_parallel_user_jobs.sql
api/helix_api/: __init__.py  blob.py  db.py  dispatch.py  identity.py  langfuse_client.py  langfuse_link.py  main.py  redis_bus.py  run_label.py  schemas.py  serialize.py  settings.py
api/helix_api/routes/: artifacts.py  gc.py  import_compile.py  jobs.py  logs.py  runtime.py  snapshots.py  traces.py
cli/: pyproject.toml
cli/helix_cli/: __main__.py  api.py  bundle.py  config.py  doctor.py  export.py  infer.py  init.py  jobs.py  snapshot.py  stack.py  submit.py
common/: helix_config.py  pyproject.toml
deploy/: .env.example  Caddyfile  build.sh  ci-deploy.sh  clickhouse-lowmem.xml  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: PLAN.md  plan_viewer.html  self-hosting.md  team-access.md
langfuse/: Dockerfile
openapi/: codegen.sh  openapi.yaml
runtime/: compile.py  compile.schema.yaml  component_aware_sampler.py  config_utils.py  data_loader.py  eval.schema.yaml  evaluate.py  image_utils.py  instruction_proposer.py  llm_pricing.py  llm_pricing.yaml  module_loader.py  optimizer.py  program_loader.py  sequential_feedback_optimizer.py  tracing.py  tracking.py
skills/helix/: SKILL.md
skills/helix-compile/: SKILL.md
skills/helix-eval/: SKILL.md
skills/helix-export/: SKILL.md
skills/helix-post-compile/: SKILL.md  post_compile.py
skills/helix-setup/: SKILL.md
ui/: Dockerfile  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/jobs/[id]/: page.tsx
ui/app/jobs/[id]/traces/: page.tsx
ui/app/jobs/[id]/traces/[traceId]/: page.tsx
ui/lib/: api.ts  progress.ts  time.ts
worker/: Dockerfile  pyproject.toml
worker/helix_worker/: allocator.py  api_client.py  blob.py  claim.py  db.py  heartbeat.py  main.py  overlay.py  progress_parser.py  runner.py  settings.py  snapshot_cache.py  upload.py  venv_cache.py
