[project]
name = "helix-api"
version = "0.1.0"
description = "Helix job-runner HTTP API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "minio>=7.2",
    "redis>=5.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "anyio>=4.4",
    "structlog>=24.1",
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_api"]
