[project]
name = "helix-cli"
version = "0.1.0"
description = "Helix CLI — submit/list/cancel/export jobs against the local Helix stack."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "PyYAML>=6.0",
    "helix-common",                 # workspace source, declared at the root
    # Generated openapi-python-client (helix_cli.generated) imports these.
    # Even though api.py currently uses httpx directly, the generated client
    # is part of the wheel and must import cleanly.
    "attrs>=23.0",
    "python-dateutil>=2.8",
]

[project.scripts]
helix = "helix_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_cli"]
