[project]
name = "helix-worker"
version = "0.1.0"
description = "Helix job runner — pulls jobs from Postgres, runs compile.py/evaluate.py."
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "minio>=7.2",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "structlog>=24.1",
    # The worker shells out to `uv sync` at runtime to build the per-snapshot
    # consumer venv, so uv must be on PATH inside the worker image.
    "uv>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helix_worker"]
